changing data fetching method from google cloud bucket to tensorflow datasets

--- a/02_ml_models/02b_neural_network.ipynb
+++ b/02_ml_models/02b_neural_network.ipynb
@@ -162,20 +162,20 @@
     "    ax[idx].legend([metric, 'val_' + metric])\n",
     "\n",
     "# Call model.predict() on a few images in the evaluation dataset\n",
-    "def plot_predictions(dataset, title=\"Predictions\"):\n",
+    "def plot_predictions(filename):\n",
     "  f, ax = plt.subplots(3, 5, figsize=(25,15))\n",
-    "  dataset_preprocessed = dataset.map(preprocess_image)\n",
-    "  for idx, (img, label_idx) in enumerate(dataset_preprocessed.take(15)):\n",
-    "    ax[idx//5, idx%5].imshow((img.numpy()))\n",
+    "  dataset = (tf.data.TextLineDataset(filename).\n",
+    "      map(decode_csv))\n",
+    "  for idx, (img, label) in enumerate(dataset.take(15)):\n",
+    "    ax[idx//5, idx%5].imshow((img.numpy()));\n",
     "    batch_image = tf.reshape(img, [1, IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS])\n",
-    "    batch_pred = model.predict(batch_image, verbose=0)\n",
+    "    batch_pred = model.predict(batch_image)\n",
     "    pred = batch_pred[0]\n",
-    "    label = CLASS_NAMES[label_idx.numpy()]\n",
+    "    label = CLASS_NAMES[label.numpy()]\n",
     "    pred_label_index = tf.math.argmax(pred).numpy()\n",
     "    pred_label = CLASS_NAMES[pred_label_index]\n",
     "    prob = pred[pred_label_index]\n",
     "    ax[idx//5, idx%5].set_title('{}: {} ({:.4f})'.format(label, pred_label, prob))\n",
-    "  f.suptitle(title, fontsize=20)\n",
     "\n",
     "def show_trained_weights(model):\n",
     "  # CLASS_NAMES is ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']\n",
@@ -218,30 +218,26 @@
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds\n",
-    "\n",
     "IMG_HEIGHT = 224\n",
     "IMG_WIDTH = 224\n",
     "IMG_CHANNELS = 3\n",
     "\n",
-    "# Load dataset using TensorFlow Datasets (public, no authentication needed)\n",
-    "(ds_train, ds_test), ds_info = tfds.load(\n",
-    "    'tf_flowers',\n",
-    "    split=['train[:80%]', 'train[80%:]'],\n",
-    "    with_info=True,\n",
-    "    as_supervised=True\n",
-    ")\n",
+    "def read_and_decode(filename, reshape_dims):\n",
+    "  # Read the file\n",
+    "  img = tf.io.read_file(filename)\n",
+    "  # Convert the compressed string to a 3D uint8 tensor.\n",
+    "  img = tf.image.decode_jpeg(img, channels=IMG_CHANNELS)\n",
+    "  # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
+    "  img = tf.image.convert_image_dtype(img, tf.float32)\n",
+    "  # Resize the image to the desired size.\n",
+    "  return tf.image.resize(img, reshape_dims)\n",
     "\n",
-    "CLASS_NAMES = ds_info.features['label'].names\n",
+    "CLASS_NAMES = [item.numpy().decode(\"utf-8\") for item in \n",
+    "               tf.strings.regex_replace(\n",
+    "                 tf.io.gfile.glob(\"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/*\"),\n",
+    "                 \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/\", \"\")]\n",
+    "CLASS_NAMES = [item for item in CLASS_NAMES if item.find(\".\") == -1]\n",
     "print(\"These are the available classes:\", CLASS_NAMES)\n",
-    "\n",
-    "# Function to preprocess images from TFDS\n",
-    "def preprocess_image(image, label):\n",
-    "  # Convert image to float32 in [0,1] range\n",
-    "  img = tf.image.convert_image_dtype(image, tf.float32)\n",
-    "  # Resize the image to the desired size\n",
-    "  img = tf.image.resize(img, [IMG_HEIGHT, IMG_WIDTH])\n",
-    "  return img, label\n",
     "\n",
     "# the label is the index into CLASS_NAMES array\n",
     "def decode_csv(csv_row):\n",
@@ -304,9 +300,13 @@
    "source": [
     "BATCH_SIZE = 32\n",
     "\n",
-    "# Prepare datasets using TFDS\n",
-    "train_dataset = ds_train.map(preprocess_image).batch(BATCH_SIZE)\n",
-    "eval_dataset = ds_test.map(preprocess_image).batch(BATCH_SIZE)\n",
+    "train_dataset = (tf.data.TextLineDataset(\n",
+    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
+    "    map(decode_csv)).batch(BATCH_SIZE)\n",
+    "\n",
+    "eval_dataset = (tf.data.TextLineDataset(\n",
+    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
+    "    map(decode_csv)).batch(BATCH_SIZE)\n",
     "\n",
     "# NN with one hidden layer\n",
     "model = tf.keras.Sequential([\n",
@@ -366,9 +366,13 @@
     "                       num_hidden = 128):\n",
     "  regularizer = tf.keras.regularizers.l1_l2(l1, l2)\n",
     "\n",
-    "  # Use TFDS datasets\n",
-    "  train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
-    "  eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
+    "  train_dataset = (tf.data.TextLineDataset(\n",
+    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
+    "      map(decode_csv)).batch(batch_size)\n",
+    "\n",
+    "  eval_dataset = (tf.data.TextLineDataset(\n",
+    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
+    "      map(decode_csv)).batch(32) # this doesn't matter\n",
     "\n",
     "  # NN with one hidden layers\n",
     "  model = tf.keras.Sequential([\n",
@@ -2035,9 +2039,13 @@
     "  return model\n",
     "\n",
     "batch_size = 32\n",
-    "# Use TFDS datasets\n",
-    "train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
-    "eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
+    "train_dataset = (tf.data.TextLineDataset(\n",
+    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
+    "    map(decode_csv)).batch(batch_size)\n",
+    "\n",
+    "eval_dataset = (tf.data.TextLineDataset(\n",
+    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
+    "    map(decode_csv)).batch(32) # this doesn't matter\n",
     "\n",
     "tuner = kt.BayesianOptimization(\n",
     "    build_model,\n",
@@ -2145,9 +2153,13 @@
     "                       num_hidden = [64, 16]):\n",
     "  regularizer = tf.keras.regularizers.l1_l2(l1, l2)\n",
     "\n",
-    "  # Use TFDS datasets\n",
-    "  train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
-    "  eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
+    "  train_dataset = (tf.data.TextLineDataset(\n",
+    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
+    "      map(decode_csv)).batch(batch_size)\n",
+    "\n",
+    "  eval_dataset = (tf.data.TextLineDataset(\n",
+    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
+    "      map(decode_csv)).batch(32) # this doesn't matter\n",
     "\n",
     "  # NN with multiple hidden layers\n",
     "  layers = [tf.keras.layers.Flatten(\n",
@@ -2277,9 +2289,13 @@
     "                       num_hidden = [64, 16]):\n",
     "  regularizer = tf.keras.regularizers.l1_l2(l1, l2)\n",
     "\n",
-    "  # Use TFDS datasets\n",
-    "  train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
-    "  eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
+    "  train_dataset = (tf.data.TextLineDataset(\n",
+    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
+    "      map(decode_csv)).batch(batch_size)\n",
+    "\n",
+    "  eval_dataset = (tf.data.TextLineDataset(\n",
+    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
+    "      map(decode_csv)).batch(32) # this doesn't matter\n",
     "\n",
     "  # NN with multiple hidden layers\n",
     "  layers = [tf.keras.layers.Flatten(\n",
