--- a/02_ml_models/02b_neural_network.ipynb
+++ b/02_ml_models/02b_neural_network.ipynb
@@ -41,9 +41,7 @@
       ]
      },
      "execution_count": 1,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -126,11 +124,27 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-24 16:46:20.149397: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.3.0\n",
+      "2.20.0\n",
       "Found GPU at: /device:GPU:0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1761349587.268795     676 gpu_device.cc:2020] Created device /device:GPU:0 with 6687 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1080, pci bus id: 0000:01:00.0, compute capability: 6.1\n"
      ]
     }
    ],
@@ -145,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "LKXV5oRmkSTK"
    },
@@ -162,20 +176,20 @@
     "    ax[idx].legend([metric, 'val_' + metric])\n",
     "\n",
     "# Call model.predict() on a few images in the evaluation dataset\n",
-    "def plot_predictions(filename):\n",
+    "def plot_predictions(dataset, title=\"Predictions\"):\n",
     "  f, ax = plt.subplots(3, 5, figsize=(25,15))\n",
-    "  dataset = (tf.data.TextLineDataset(filename).\n",
-    "      map(decode_csv))\n",
-    "  for idx, (img, label) in enumerate(dataset.take(15)):\n",
-    "    ax[idx//5, idx%5].imshow((img.numpy()));\n",
+    "  dataset_preprocessed = dataset.map(preprocess_image)\n",
+    "  for idx, (img, label_idx) in enumerate(dataset_preprocessed.take(15)):\n",
+    "    ax[idx//5, idx%5].imshow((img.numpy()))\n",
     "    batch_image = tf.reshape(img, [1, IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS])\n",
-    "    batch_pred = model.predict(batch_image)\n",
+    "    batch_pred = model.predict(batch_image, verbose=0)\n",
     "    pred = batch_pred[0]\n",
-    "    label = CLASS_NAMES[label.numpy()]\n",
+    "    label = CLASS_NAMES[label_idx.numpy()]\n",
     "    pred_label_index = tf.math.argmax(pred).numpy()\n",
     "    pred_label = CLASS_NAMES[pred_label_index]\n",
     "    prob = pred[pred_label_index]\n",
     "    ax[idx//5, idx%5].set_title('{}: {} ({:.4f})'.format(label, pred_label, prob))\n",
+    "  f.suptitle(title, fontsize=20)\n",
     "\n",
     "def show_trained_weights(model):\n",
     "  # CLASS_NAMES is ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']\n",
@@ -197,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -210,7 +224,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These are the available classes: ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']\n"
+      "These are the available classes: ['dandelion', 'daisy', 'tulips', 'sunflowers', 'roses']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1761349587.929199     676 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 6687 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1080, pci bus id: 0000:01:00.0, compute capability: 6.1\n"
      ]
     }
    ],
@@ -218,26 +239,30 @@
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "import tensorflow_datasets as tfds\n",
+    "\n",
     "IMG_HEIGHT = 224\n",
     "IMG_WIDTH = 224\n",
     "IMG_CHANNELS = 3\n",
     "\n",
-    "def read_and_decode(filename, reshape_dims):\n",
-    "  # Read the file\n",
-    "  img = tf.io.read_file(filename)\n",
-    "  # Convert the compressed string to a 3D uint8 tensor.\n",
-    "  img = tf.image.decode_jpeg(img, channels=IMG_CHANNELS)\n",
-    "  # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
-    "  img = tf.image.convert_image_dtype(img, tf.float32)\n",
-    "  # Resize the image to the desired size.\n",
-    "  return tf.image.resize(img, reshape_dims)\n",
+    "# Load dataset using TensorFlow Datasets (public, no authentication needed)\n",
+    "(ds_train, ds_test), ds_info = tfds.load(\n",
+    "    'tf_flowers',\n",
+    "    split=['train[:80%]', 'train[80%:]'],\n",
+    "    with_info=True,\n",
+    "    as_supervised=True\n",
+    ")\n",
     "\n",
-    "CLASS_NAMES = [item.numpy().decode(\"utf-8\") for item in \n",
-    "               tf.strings.regex_replace(\n",
-    "                 tf.io.gfile.glob(\"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/*\"),\n",
-    "                 \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/\", \"\")]\n",
-    "CLASS_NAMES = [item for item in CLASS_NAMES if item.find(\".\") == -1]\n",
+    "CLASS_NAMES = ds_info.features['label'].names\n",
     "print(\"These are the available classes:\", CLASS_NAMES)\n",
+    "\n",
+    "# Function to preprocess images from TFDS\n",
+    "def preprocess_image(image, label):\n",
+    "  # Convert image to float32 in [0,1] range\n",
+    "  img = tf.image.convert_image_dtype(image, tf.float32)\n",
+    "  # Resize the image to the desired size\n",
+    "  img = tf.image.resize(img, [IMG_HEIGHT, IMG_WIDTH])\n",
+    "  return img, label\n",
     "\n",
     "# the label is the index into CLASS_NAMES array\n",
     "def decode_csv(csv_row):\n",
@@ -271,42 +296,61 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/miniconda3/envs/ml/lib/python3.11/site-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "104/104 [==============================] - 266s 3s/step - loss: 13.8890 - accuracy: 0.3512 - val_loss: 4.3941 - val_accuracy: 0.3514\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-24 16:46:30.096913: I tensorflow/core/kernels/data/tf_record_dataset_op.cc:396] The default buffer size is 262144, which is overridden by the user specified `buffer_size` of 8388608\n",
+      "2025-10-24 16:46:30.185055: I external/local_xla/xla/service/service.cc:163] XLA service 0x7c17c8006080 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2025-10-24 16:46:30.185241: I external/local_xla/xla/service/service.cc:171]   StreamExecutor device (0): NVIDIA GeForce GTX 1080, Compute Capability 6.1\n",
+      "2025-10-24 16:46:30.237420: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2025-10-24 16:46:30.381189: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:473] Loaded cuDNN version 91400\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m12/92\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1s\u001b[0m 16ms/step - accuracy: 0.2149 - loss: 78.0591"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1761349591.177301     915 device_compiler.h:196] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 35ms/step - accuracy: 0.3198 - loss: 12.8552 - val_accuracy: 0.3624 - val_loss: 3.1817\n",
       "Epoch 2/10\n",
-      "104/104 [==============================] - 259s 2s/step - loss: 8.0488 - accuracy: 0.3876 - val_loss: 7.6864 - val_accuracy: 0.3216\n",
-      "Epoch 3/10\n",
-      "104/104 [==============================] - 257s 2s/step - loss: 4.1225 - accuracy: 0.4406 - val_loss: 3.0148 - val_accuracy: 0.4189\n",
-      "Epoch 4/10\n",
-      "104/104 [==============================] - 273s 3s/step - loss: 1.9471 - accuracy: 0.5130 - val_loss: 2.7941 - val_accuracy: 0.3622\n",
-      "Epoch 5/10\n",
-      "104/104 [==============================] - 266s 3s/step - loss: 1.9999 - accuracy: 0.4967 - val_loss: 3.1695 - val_accuracy: 0.3703\n",
-      "Epoch 6/10\n",
-      "104/104 [==============================] - 254s 2s/step - loss: 1.9393 - accuracy: 0.4721 - val_loss: 2.1292 - val_accuracy: 0.4486\n",
-      "Epoch 7/10\n",
-      "104/104 [==============================] - 251s 2s/step - loss: 1.5812 - accuracy: 0.5364 - val_loss: 1.8492 - val_accuracy: 0.4297\n",
-      "Epoch 8/10\n",
-      "104/104 [==============================] - 259s 2s/step - loss: 1.4979 - accuracy: 0.5570 - val_loss: 3.1394 - val_accuracy: 0.3919\n",
-      "Epoch 9/10\n",
-      "104/104 [==============================] - 258s 2s/step - loss: 1.9469 - accuracy: 0.4924 - val_loss: 1.6063 - val_accuracy: 0.3324\n",
-      "Epoch 10/10\n",
-      "104/104 [==============================] - 252s 2s/step - loss: 1.3447 - accuracy: 0.4476 - val_loss: 1.5029 - val_accuracy: 0.3432\n"
+      "\u001b[1m49/92\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - accuracy: 0.3816 - loss: 2.6016"
      ]
     }
    ],
    "source": [
     "BATCH_SIZE = 32\n",
     "\n",
-    "train_dataset = (tf.data.TextLineDataset(\n",
-    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
-    "    map(decode_csv)).batch(BATCH_SIZE)\n",
-    "\n",
-    "eval_dataset = (tf.data.TextLineDataset(\n",
-    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
-    "    map(decode_csv)).batch(BATCH_SIZE)\n",
+    "# Prepare datasets using TFDS\n",
+    "train_dataset = ds_train.map(preprocess_image).batch(BATCH_SIZE)\n",
+    "eval_dataset = ds_test.map(preprocess_image).batch(BATCH_SIZE)\n",
     "\n",
     "# NN with one hidden layer\n",
     "model = tf.keras.Sequential([\n",
@@ -366,13 +410,9 @@
     "                       num_hidden = 128):\n",
     "  regularizer = tf.keras.regularizers.l1_l2(l1, l2)\n",
     "\n",
-    "  train_dataset = (tf.data.TextLineDataset(\n",
-    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
-    "      map(decode_csv)).batch(batch_size)\n",
-    "\n",
-    "  eval_dataset = (tf.data.TextLineDataset(\n",
-    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
-    "      map(decode_csv)).batch(32) # this doesn't matter\n",
+    "  # Use TFDS datasets\n",
+    "  train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
+    "  eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
     "\n",
     "  # NN with one hidden layers\n",
     "  model = tf.keras.Sequential([\n",
@@ -2039,13 +2079,9 @@
     "  return model\n",
     "\n",
     "batch_size = 32\n",
-    "train_dataset = (tf.data.TextLineDataset(\n",
-    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
-    "    map(decode_csv)).batch(batch_size)\n",
-    "\n",
-    "eval_dataset = (tf.data.TextLineDataset(\n",
-    "    \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
-    "    map(decode_csv)).batch(32) # this doesn't matter\n",
+    "# Use TFDS datasets\n",
+    "train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
+    "eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
     "\n",
     "tuner = kt.BayesianOptimization(\n",
     "    build_model,\n",
@@ -2153,13 +2189,9 @@
     "                       num_hidden = [64, 16]):\n",
     "  regularizer = tf.keras.regularizers.l1_l2(l1, l2)\n",
     "\n",
-    "  train_dataset = (tf.data.TextLineDataset(\n",
-    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
-    "      map(decode_csv)).batch(batch_size)\n",
-    "\n",
-    "  eval_dataset = (tf.data.TextLineDataset(\n",
-    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
-    "      map(decode_csv)).batch(32) # this doesn't matter\n",
+    "  # Use TFDS datasets\n",
+    "  train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
+    "  eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
     "\n",
     "  # NN with multiple hidden layers\n",
     "  layers = [tf.keras.layers.Flatten(\n",
@@ -2289,13 +2321,9 @@
     "                       num_hidden = [64, 16]):\n",
     "  regularizer = tf.keras.regularizers.l1_l2(l1, l2)\n",
     "\n",
-    "  train_dataset = (tf.data.TextLineDataset(\n",
-    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/train_set.csv\").\n",
-    "      map(decode_csv)).batch(batch_size)\n",
-    "\n",
-    "  eval_dataset = (tf.data.TextLineDataset(\n",
-    "      \"gs://practical-ml-vision-book-data/flowers_5_jpeg/flower_photos/eval_set.csv\").\n",
-    "      map(decode_csv)).batch(32) # this doesn't matter\n",
+    "  # Use TFDS datasets\n",
+    "  train_dataset = ds_train.map(preprocess_image).batch(batch_size)\n",
+    "  eval_dataset = ds_test.map(preprocess_image).batch(32) # this doesn't matter\n",
     "\n",
     "  # NN with multiple hidden layers\n",
     "  layers = [tf.keras.layers.Flatten(\n",
@@ -2594,7 +2622,7 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-2-3-gpu.2-3:m59"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -2608,7 +2636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
